Se agrega body de Carlos

--- a/index.html
+++ b/index.html
@@ -1,12 +1,298 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pagina Principal</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur deleniti aut dolores exercitationem. Sit optio odit amet quis aliquid suscipit blanditiis deserunt quasi, aspernatur quia ullam fugiat quae incidunt dicta.</p>
+    <main><main>
+        <div id="services" name="services">
+            <div class="cuerpo">
+                <div class="section-tittle">
+                    <h2>Juegos para PlayStations</h2>
+                    <p>Los mejores juegos en un solo lugar.</p>
+                </div>
+                <div class="content">
+                    <div class="single-services">
+                        <img src="imágenes/PSGOF1.jpeg">
+                        <div class="overlay">
+                            <h3>God Of War:Ragnarok</h3>
+                            <p>Videojuego de accion y aventura en tercera persona.</p>
+                            <a href=" ">COMPRAR</a>
+                        </div>
+                    </div> 
+                    <div class="single-services">
+                        <img src="imágenes/PSHorizon.jpeg">
+                        <div class="overlay">
+                            <h3>Horizon forbidden West</h3>
+                            <p>Videojuego de rol deaccion, aventura y mundo abierto.</p>
+                            <a href=" ">COMPRAR</a>
+                        </div>
+                    </div> 
+                    <div class="single-services">
+                        <img src="imágenes/PSSP21.jpeg" alt="">
+                        <div class="overlay">
+                            <h3>Spider-Man 2</h3>
+                            <p>Videojuego de accion y aventura de mundo abierto.</p>
+                            <a href=" ">COMPRAR</a>
+                        </div>
+                    </div> 
+                    
+                    <div class="single-services">
+                        <img src="imágenes/ps.jpeg" alt="">
+                        <div class="overlay">
+                            <h3>Mas</h3>
+                            <p> Descubri mucho mas videojuego para tu consola.</p>
+                            <a href=" ">VER MAS</a>
+                        </div>
+                    </div> 
+                </div>  
+                <div class="section-tittle">
+                    <h2>Juegos para XBox</h2>
+                    <p>Los mejores juegos en un solo lugar.</p>
+                </div>
+                <div class="content">
+                    <div class="single-services">
+                        <img src="imágenes/XRobin.jpeg">
+                        <div class="overlay">
+                            <h3>Robin Hood-Sherwood Builders</h3>
+                            <p>Videojuego de accion y aventura de mundo abierto.</p>
+                            <a href=" ">COMPRAR</a>
+                        </div>
+                    </div> 
+                    <div class="single-services">
+                        <img src="imágenes/XOutpost.jpeg">
+                        <div class="overlay">
+                            <h3>Outpost:Infinity Siege</h3>
+                            <p>Videojuego de accion y aventura de tercera persona</p>
+                            <a href=" ">COMPRAR</a>
+                        </div>
+                    </div> 
+                    <div class="single-services">
+                        <img src="imágenes/XHomewordl.jpeg" alt="">
+                        <div class="overlay">
+                            <h3>Homeworrld 3</h3>
+                            <p>Videojuego de accion y estrategia.</p>
+                            <a href=" ">COMPRAR</a>
+                        </div>
+                    </div>          
+                    <div class="single-services">
+                        <img src="imágenes/xbox.jpg" alt="">
+                        <div class="overlay">
+                            <h3>Mas</h3>
+                            <p> Descubri mucho mas videojuego para tu consola.</p>
+                            <a href=" ">VER MAS</a>
+                        </div>
+                    </div>      
+                </div> 
+                <div class="section-tittle">
+                    <h2>Juegos para PC</h2>
+                    <p>Los mejores juegos en un solo lugar.</p>
+                </div>
+                <div class="content">
+                    <div class="single-services">
+                        <img src="imágenes/PCHorizon 5.jpeg">
+                        <div class="overlay">
+                            <h3>Forza Horizon 5</h3>
+                            <p>Videojuego de accion y conduccion.</p>
+                            <a href=" ">COMPRAR</a>
+                        </div>
+                    </div> 
+                    <div class="single-services">
+                        <img src="imágenes/PCHalo.jpeg">
+                        <div class="overlay">
+                            <h3>Halo Infinite</h3>
+                            <p>Videojuego de accion, aventura y estrategia.</p>
+                            <a href=" ">COMPRAR</a>
+                        </div>
+                    </div> 
+                    <div class="single-services">
+                        <img src="imágenes/PCGears Tactics.jpeg" alt="">
+                        <div class="overlay">
+                            <h3>Gears Tactics</h3>
+                            <p>Videojuego de accion y estrategia.</p>
+                            <a href=" ">COMPRAR</a>
+                        </div>
+                    </div>          
+                    <div class="single-services">
+                        <img src="imágenes/Pc.jpeg" alt="">
+                        <div class="overlay">
+                            <h3>Mas</h3>
+                            <p> Descubri mucho mas videojuego para tu PC.</p>
+                            <a href="#contenedor">VER MAS</a>
+                        </div>
+                    </div>      
+                </div>
+                <div class="section-tittle">
+                    <h2>Juegos compatibles con:PS,XBox y PC.</h2>
+                    <p>Los mejores juegos en un solo lugar.</p>
+                </div>
+                <div class="content">
+                    <div class="single-services">
+                        <img src="imágenes/Minecraft.jpg">
+                        <div class="overlay">
+                            <h3>Minecraft</h3>
+                            <p>Videojuego de construccion, estrategia y mundo abierto.</p>
+                            <a href=" ">COMPRAR</a>
+                        </div>
+                    </div> 
+                    <div class="single-services">
+                        <img src="imágenes/Fortnite.jpeg">
+                        <div class="overlay">
+                            <h3>Fortnite</h3>
+                            <p>Videojuego de estrategia y shooter.</p>
+                            <a href=" ">COMPRAR</a>
+                        </div>
+                    </div> 
+                    <div class="single-services">
+                        <img src="imágenes/Gothan.jpg" alt="">
+                        <div class="overlay">
+                            <h3>Gotham Knights</h3>
+                            <p>Videojuego de role-playing en tercera persona.</p>
+                            <a href=" ">COMPRAR</a>
+                        </div>
+                    </div>          
+                    <div class="single-services">
+                        <img src="imágenes/diablo4.jpg" alt="">
+                        <div class="overlay">
+                            <h3>Diablo 4</h3>
+                            <p>Videojuego de estrategia y aventura.</p>
+                            <a href=" ">COMPRAR</a>
+                        </div>
+                    </div>  
+                    <div class="single-services">
+                        <img src="imágenes/CallofDuty.jpg" alt="">
+                        <div class="overlay">
+                            <h3>Call of Duty:Modern Warfare II</h3>
+                            <p>Videojuego de accion en primera persona.</p>
+                            <a href=" ">COMPRAR</a>
+                        </div>
+                    </div>    
+                    <div class="single-services">
+                        <img src="imágenes/f1.jpg" alt="">
+                        <div class="overlay">
+                            <h3>F1 22</h3>
+                            <p>Videojuego de estrategia y conduccion.</p>
+                            <a href=" ">COMPRAR</a>
+                        </div>
+                    </div>  
+                    <div class="single-services">
+                        <img src="imágenes/NFS.jpg" alt="">
+                        <div class="overlay">
+                            <h3>Need fos Speed Heat</h3>
+                            <p>Videojuego de estrategia y conduccion.</p>
+                            <a href=" ">COMPRAR</a>
+                        </div>
+                    </div> 
+                    <div class="single-services">
+                        <img src="imágenes/Overwach.jpg" alt="">
+                        <div class="overlay">
+                            <h3>Overwatch 2</h3>
+                            <p>Videojuego de accion, estrategia en primera persona.</p>
+                            <a href=" ">COMPRAR</a>
+                        </div>
+                    </div> 
+                    <div class="single-services">
+                        <img src="imágenes/REVerse.jpg" alt="">
+                        <div class="overlay">
+                            <h3>Resident Evil Re:Verse</h3>
+                            <p>Videojuego de accion, lucha y supervivencia.</p>
+                            <a href=" ">COMPRAR</a>
+                        </div>
+                    </div> 
+                    <div class="single-services">
+                        <img src="imágenes/Rocket.jpg" alt="">
+                        <div class="overlay">
+                            <h3>Rocket League</h3>
+                            <p>Videojuego que combina el futbol con el caos a 4 ruedas.</p>
+                            <a href=" ">COMPRAR</a>
+                        </div>
+                    </div> 
+                    <div class="single-services">
+                        <img src="imágenes/SuicideSquad.jpg" alt="">
+                        <div class="overlay">
+                            <h3>Suicide Squad:Kill the Justice league</h3>
+                            <p>Videojuego de accion, estrategia y supervivencia.</p>
+                            <a href=" ">COMPRAR</a>
+                        </div>
+                    </div> 
+                    <div class="single-services">
+                        <img src="imágenes/SF6.jpg" alt="">
+                        <div class="overlay">
+                            <h3>Street Fighter 6</h3>
+                            <p>Videojuego de accion, estrategia y lucha.</p>
+                            <a href=" ">COMPRAR</a>
+                        </div>
+                    </div> 
+                    <div class="single-services">
+                        <img src="imágenes/FF4.jpeg" alt="">
+                        <div class="overlay">
+                            <h3>Final Fantazi XIV</h3>
+                            <p>Videojuego de accion de rol multijugador masivo en linea.</p>
+                            <a href=" ">COMPRAR</a>
+                        </div>
+                    </div>
+                    <div class="single-services">
+                        <img src="imágenes/StarWars.jpg" alt="">
+                        <div class="overlay">
+                            <h3>Star Wars:Squadrons</h3>
+                            <p>Videojuego de accion, estrategia y combate espacial del universo Star Wars.</p>
+                            <a href=" ">COMPRAR</a>
+                        </div>
+                    </div>
+                    <div class="single-services">
+                        <img src="imágenes/Warzone.jpg" alt="">
+                        <div class="overlay">
+                            <h3>Call of Duty:Warzone 2</h3>
+                            <p>Videojuego de Battle Royale.</p>
+                            <a href=" ">COMPRAR</a>
+                        </div>
+                    </div>
+                    <div class="single-services">
+                        <img src="imágenes/Borderlands3.jpg" alt="">
+                        <div class="overlay">
+                            <h3>Bordelands 3</h3>
+                            <p>Videojuego de accion, shooter y estrategia en primera persona.</p>
+                            <a href=" ">COMPRAR</a>
+                        </div>
+                    </div>
+                    <div class="single-services">
+                        <img src="imágenes/Among Us Game.jpeg" alt="">
+                        <div class="overlay">
+                            <h3>Among Us</h3>
+                            <p>Videojuego de accion, estrategia y multijugador on-line.</p>
+                            <a href=" ">COMPRAR</a>
+                        </div>
+                    </div>
+                    <div class="single-services">
+                        <img src="imágenes/Avatar.jpeg" alt="">
+                        <div class="overlay">
+                            <h3>Avatar:Frontiers of Pandora</h3>
+                            <p>Videojuego de accion y aventura.</p>
+                            <a href=" ">COMPRAR</a>
+                        </div>
+                    </div>
+                    <div class="single-services">
+                        <img src="imágenes/Brahalla.jpg" alt="">
+                        <div class="overlay">
+                            <h3>Brawlhalla</h3>
+                            <p>Videojuego de accion, estrategia y lucha.</p>
+                            <a href=" ">COMPRAR</a>
+                        </div>
+                    </div>
+                    <div class="single-services">
+                        <img src="imágenes/consolas2.jpeg" alt="">
+                        <div class="overlay">
+                            <h3>Mas</h3>
+                            <p> Descubri mucho mas videojuego para tu consola.</p>
+                            <a href=" ">Ver Mas</a>
+                        </div>
+                    </div> 
+                </div>
+                                      
+    </main>
 </body>
 </html>
