--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
     <!-- google icons -->
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- Estilos personalizados -->
     <link rel="stylesheet" href="css/style.css">
 
 </head>
 
 <body>
+    <div id="inicio-pagina"></div>
     <header class="header">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
@@ -52,9 +54,10 @@
                                 Juegos
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Play 4</a></li>
-                                <li><a class="dropdown-item" href="#">Xbox</a></li>
-                                <li><a class="dropdown-item" href="#">PC</a></li>
+                                <li><a class="dropdown-item" href="#play">Play 4</a></li>
+                                <li><a class="dropdown-item" href="#xbox">Xbox</a></li>
+                                <li><a class="dropdown-item" href="#pc">PC</a></li>
+                                <li><a class="dropdown-item" href="#multiplataforma">Multiplataforma</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
@@ -136,12 +139,14 @@
             </div>
         </div>
     </section>
-      
+
+   
+
     <main>
         <div id="services" name="services">
             <div class="cuerpo">
                 <div class="section-tittle">
-                    <h2>Juegos para PlayStations</h2>
+                    <h2 id="play">Juegos para PlayStations</h2>
                     <p>Los mejores juegos en un solo lugar.</p>
                 </div>
                 <div class="content">
@@ -180,7 +185,7 @@
                     </div>
                 </div>
                 <div class="section-tittle">
-                    <h2>Juegos para XBox</h2>
+                    <h2 id="xbox">Juegos para XBox</h2>
                     <p>Los mejores juegos en un solo lugar.</p>
                 </div>
                 <div class="content">
@@ -218,7 +223,7 @@
                     </div>
                 </div>
                 <div class="section-tittle">
-                    <h2>Juegos para PC</h2>
+                    <h2 id="pc">Juegos para PC</h2>
                     <p>Los mejores juegos en un solo lugar.</p>
                 </div>
                 <div class="content">
@@ -256,7 +261,7 @@
                     </div>
                 </div>
                 <div class="section-tittle">
-                    <h2>Juegos compatibles con:PS,XBox y PC.</h2>
+                    <h2 id="multiplataforma">Juegos compatibles con:PS,XBox y PC.</h2>
                     <p>Los mejores juegos en un solo lugar.</p>
                 </div>
                 <div class="content">
@@ -423,6 +428,14 @@
                 </div>
 
     </main>
+    <div id="boton">
+        <a href="#inicio-pagina">
+            <svg id="boton-arriba" "http://www.w3.org/2000/svg" height="50" width="50" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#4c4e52" 
+             d="M256 48a208 208 0 1 1 0 416 208 208 0 1 1 0-416zm0 464A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM135.1 217.4c-4.5 4.2-7.1 10.1-7.1 16.3c0 12.3 10 22.3 22.3 22.3H208v96c0 
+             17.7 14.3 32 32 32h32c17.7 0 32-14.3 32-32V256h57.7c12.3 0 22.3-10 22.3-22.3c0-6.2-2.6-12.1-7.1-16.3L269.8 117.5c-3.8-3.5-8.7-5.5-13.8-5.5s-10.1 2-13.8 5.5L135.1 217.4z"/>
+            </svg>
+        </a>
+    </div>
     <footer class="footer bg-dark text-light py-5">
         <div class="container">
             <div class="row">
