--- a/index.html
+++ b/index.html
@@ -457,11 +457,11 @@
                 <div class="col-lg-4">
                     <span><strong>SEGUINOS EN</strong></span>
                     <ul class="list-unstyled d-flex align-items-center p-2">
-                        <li class="me-3"><a href="https://facebook.com" class="icon-link"><img
-                                    src="/imágenes/facebook.png" alt="Facebook"></a></li>
-                        <li class="me-3"><a href="#" class="icon-link"><img src="/imágenes/twitter.png"
+                        <li class="me-3"><a href="https://facebook.com" target="_blank" class="icon-link"><img
+                                    src="imágenes/facebook.png" alt="Facebook" ></a></li>
+                        <li class="me-3"><a href="#" class="icon-link" target="_blank"><img src="imágenes/twitter.png"
                                     alt="Twitter"></a></li>
-                        <li class="me-3"><a href="#" class="icon-link"><img src="/imágenes/instagram.png"
+                        <li class="me-3"><a href="#" class="icon-link" target="_blank" ><img src="imágenes/instagram.png"
                                     alt="Instagram"></a></li>
                     </ul>
                 </div>
