--- a/index.html
+++ b/index.html
@@ -25,64 +25,65 @@
 
 <body>
     <div id="inicio-pagina"></div>
-    <header class="header">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-                <a href="index.html" class="nav-link" id="icono">
-                    <div class="mx-3 align-items-center icon-container">
-                        <img src="imágenes/play1.png" alt="">
-                    </div>
-                </a>
-
-                <a class="nav-link navbar-brand" href="#">PULL-GAMES</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Ofertas</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                Juegos
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#play">Play 4</a></li>
-                                <li><a class="dropdown-item" href="#xbox">Xbox</a></li>
-                                <li><a class="dropdown-item" href="#pc">PC</a></li>
-                                <li><a class="dropdown-item" href="#multiplataforma">Multiplataforma</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Registrarse</a>
-                        </li>
-                        <li class="nav-item mx-3">
-                            <a href="" class="nav-link d-flex align-items-center btn btn-outline-primary"
-                                data-bs-toggle="modal" data-bs-target="#staticBackdropLogin">
-                                <span class="material-symbols-outlined mx-1">
-                                    input
-                                </span>
-                                <span>
-                                    Iniciar Sesión
-                                </span>
-                            </a>
-                        </li>
-
-                    </ul>
+   <!-- Modificamos el header para que tenga posición fija -->
+<header class="header">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a href="index.html" class="nav-link" id="icono">
+                <div class="mx-3 align-items-center icon-container">
+                    <img src="imágenes/joystick (1).png" alt="">
                 </div>
-            </div>
-        </nav>
-    </header>
+            </a>
 
-    <section class="ofertas">
-        <div class="container">
+            <a class="nav-link navbar-brand" href="#">PULL-GAMES</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#inicio-pagina">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Ofertas">Ofertas</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            Juegos
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#play">Play 4</a></li>
+                            <li><a class="dropdown-item" href="#xbox">Xbox</a></li>
+                            <li><a class="dropdown-item" href="#pc">PC</a></li>
+                            <li><a class="dropdown-item" href="#multiplataforma">Multiplataforma</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Registrarse</a>
+                    </li>
+                    <li class="nav-item mx-3">
+                        <a href="" class="nav-link d-flex align-items-center btn btn-outline-primary"
+                            data-bs-toggle="modal" data-bs-target="#staticBackdropLogin">
+                            <span class="material-symbols-outlined mx-1">
+                                input
+                            </span>
+                            <span>
+                                Iniciar Sesión
+                            </span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
+
+
+    <section class="ofertas" id="Ofertas">
+        <div class="container" >
             <h1 class="text-center mb-4">Ofertas</h1>
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
