Anadido registro (inicio de sesion). Faltaria poner por separado inicio de sesion y registro.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Registrarse</a>
+                            <a class="nav-link" href="registro.html">Registrarse</a>
                         </li>
                         <li class="nav-item mx-2">
                             <a href="" class="nav-link d-flex align-items-center btn btn-outline-primary"
